# kommander

./: .krazy  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  Kommander-TODO.kno  Makefile.am  Messages.sh  README  VERSION  configure.in.in  kmdrdesignerplugin.kmdr  kommander-editor.kdevelop  kommander.kdevelop  x-kommander.desktop
doc/: CMakeLists.txt  Makefile.am  basics.docbook  commands.docbook  credits.docbook  dcop.docbook  editor.docbook  extending.docbook  extendingkommander.txt  glossary.docbook  index.docbook  installation.docbook  introduction.docbook  kde-default.css  parser.docbook  q-and-a.docbook  specials.docbook  translating.docbook  tutorials.docbook  widgets.docbook
editor/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  about.ui  actiondnd.cpp  actiondnd.h  actioneditor.ui  actioneditorimpl.cpp  actioneditorimpl.h  actioninterface.h  actionlistview.cpp  actionlistview.h  asciivalidator.cpp  asciivalidator.h  assistproc.cpp  assistproc.h  assoctexteditor.ui  assoctexteditorimpl.cpp  assoctexteditorimpl.h  choosewidget.ui  choosewidgetimpl.cpp  choosewidgetimpl.h  classbrowserinterface.h  command.cpp  command.h  config.cpp  config.h  connectioneditor.ui  connectioneditorimpl.cpp  connectioneditorimpl.h  connectionviewer.ui  connectionviewerimpl.cpp  createtemplate.ui  customwidgeteditor.ui  customwidgeteditorimpl.cpp  defs.cpp  designerapp.cpp  designerapp.h  designerappiface.cpp  (+118 more)
editor/pics/: Makefile.am  images.h  mkimages  mkpics  splash.h  splashloader.cpp
editor/pics/large/: datepicker.xpm  project.xpm
editor/pics/small/: databrowser.xpm  datatable.xpm  dataview.xpm
editor/templates/: Configuration_Dialog.ui  Dialog_with_Buttons_(Bottom).ui  Dialog_with_Buttons_(Right).ui  Makefile  Makefile.in  Tab_Dialog.ui
examples/: Makefile.am  checkmail.kmdr  ex1.kmdr  execprogram.kmdr  firstform.kmdr.kmdr  form1.kmdr  form2.kmdr  form3.kmdr  form4.kmdr  form5.kmdr  globals.kmdr  newfile.kmdr  populate.kmdr  resize.kmdr  selectedwidgettext.kmdr  settings.kmdr  simplelist.kmdr  tar.kmdr  tidy.kmdr  widgetgenerator.kmdr
examples/current/: Makefile.am  a1.kmdr  b1.kmdr  editor-poc.kmdr  keyvaluecombo.kmdr  kpartmwframe.kmdr  kpartpart.kmdr  passvariables.kmdr  tableselect.kmdr
examples/old/: Makefile.am  checkmail.kmdr  form1.kmdr  form2.kmdr  form5.kmdr  newfile.kmdr  tidy.kmdr  widgetgenerator.kmdr  wizard.kmdr
examples/tutorial/: Makefile.am  README  append.kmdr  arrays.kmdr  calc.kmdr  cmdline.kmdr  dcop.kmdr  dialogs.kmdr  globals.kmdr  initialize.kmdr  loop.kmdr  picview.kmdr  progressbar.kmdr  settings.kmdr  slots.kmdr  statusbar.kmdr  strings.kmdr  table.kmdr  tree.kmdr  widgets.kmdr
executor/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  dcopkommanderif.h  domtool.cpp  ewidgetfactory.cpp  ewidgetfactory.h  instance.cpp  instance.h  kmdr-executor.desktop  kommander.desktop  main.cpp  org.kdewebdev.kommander.xml  register.cpp
factory/: CMakeLists.txt  Makefile.am  domtool.cpp  domtool.h  kommanderfactory.cpp  kommanderfactory.h  kommanderversion.h
icons/: Makefile.am
kmdrtools/: Makefile.am  dcoptool-oldparser.kmdr  examples.kmdr
lib/: CMakeLists.txt  domtool.cpp  expression.cpp  function.cpp  function.h  functionlib.cpp  invokeclass.cpp  invokeclass.h  kmdrmainwindow.cpp  kmdrmainwindow.h  kommander_export.h  kommandercore_export.h  kommanderfactory.cpp  kommanderfactory.h  kommanderfunctions.cpp  kommanderplugin.cpp  kommanderplugin.h  kommanderwidget.cpp  kommanderwidget.h  kommanderwindow.cpp  kommanderwindow.h  myprocess.cpp  myprocess.h  parsenode.cpp  parsenode.h  parser.cpp  parser.h  parserdata.cpp  parserdata.h  specialinformation.cpp  specialinformation.h  specials.cpp  specials.h
part/: Makefile.am  kommander_part.cpp  kommander_part.desktop  kommander_part.h
plugin/: CMakeLists.txt  Makefile.am  kommanderplugin.cpp  kommanderplugin.h  specialinformation.cpp  specialinformation.h  specials.h
pluginmanager/: CMakeLists.txt  Makefile.am  main.cpp  mainwindow.cpp  mainwindow.h  pluginmanager.cpp  pluginmanager.h
widget/: CMakeLists.txt  Makefile.am  dcopinformation.cpp  dcopinformation.h  expression.cpp  expression.h  function.cpp  function.h  functionlib.cpp  functionlib.h  invokeclass.cpp  invokeclass.h  kmdrmainwindow.cpp  kmdrmainwindow.h  kommander_export.h  kommanderfunctions.cpp  kommanderwidget.cpp  kommanderwidget.h  kommanderwindow.cpp  kommanderwindow.h  myprocess.cpp  myprocess.h  parsenode.cpp  parsenode.h  parser.cpp  parser.h  parserdata.cpp  parserdata.h  specialinformation.cpp  specialinformation.h  specials.cpp  specials.h
widgets/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  aboutdialog.cpp  aboutdialog.h  aboutdialogkmdrdesignerplugin.cpp  aboutdialogkmdrdesignerplugin.h  assoctextwidget.cpp  assoctextwidget.h  buttongroup.cpp  buttongroup.h  buttongroupkmdrdesignerplugin.cpp  buttongroupkmdrdesignerplugin.h  checkbox.cpp  checkbox.h  checkboxkmdrdesignerplugin.cpp  checkboxkmdrdesignerplugin.h  closebutton.cpp  closebutton.h  closebuttonkmdrdesignerplugin.cpp  closebuttonkmdrdesignerplugin.h  colordialog.cpp  colordialog.h  combobox.cpp  combobox.h  comboboxkmdrdesignerplugin.cpp  comboboxkmdrdesignerplugin.h  corewidgetsplugin.cpp  datepicker.cpp  datepicker.h  datepickerkmdrdesignerplugin.cpp  datepickerkmdrdesignerplugin.h  dialog.cpp  dialog.h  ewidgetfactory.cpp  execbutton.cpp  execbutton.h  execbuttonkmdrdesignerplugin.cpp  execbuttonkmdrdesignerplugin.h  (+103 more)
widgets/pixmaps/: textbold.xpm  textcenter.xpm  textitalic.xpm  textleft.xpm  textright.xpm  textunder.xpm
working/: Makefile.am  extendingkommander.txt  extractkmdr  kmdr2po  translating.txt
working/plugintemplate/: Makefile.am  kommanderplugin.kdevtemplate  plugin.cpp  src-Makefile.am  widget.cpp  widget.h
