execkmdrdir = ${kde_datadir}/kommander/examples/old

execkmdr_SCRIPTS = checkmail.kmdr  execprogram.kmdr\
	form1.kmdr  form3.kmdr  form5.kmdr    populate.kmdr  selectedwidgettext.kmdr  simplelist.kmdr  tidy.kmdr\
	wizard.kmdr ex1.kmdr        firstform.kmdr.kmdr  form2.kmdr  form4.kmdr  newfile.kmdr  resize.kmdr    settings.kmdr   \
	tar.kmdr         widgetgenerator.kmdr
	