execkmdrdir = ${kde_datadir}/kommander/examples/tutorial

execkmdr_SCRIPTS = append.kmdr  calc.kmdr     dcop.kmdr     globals.kmdr     loop.kmdr     progressbar.kmdr  slots.kmdr \
	strings.kmdr  tree.kmdr arrays.kmdr  cmdline.kmdr  dialogs.kmdr  initialize.kmdr  picview.kmdr  settings.kmdr \
	statusbar.kmdr  table.kmdr    widgets.kmdr
	

tutorialdir = ${kde_datadir}/kommander/examples/tutorial
tutorial_DATA = README

