execkmdrdir = ${kde_datadir}/kmdr-editor/editor/tutorial

execkmdr_SCRIPTS = append.kmdr  calc.kmdr     dcop.kmdr     globals.kmdr     loop.kmdr     progressbar.kmdr  slots.kmdr \
	strings.kmdr  tree.kmdr arrays.kmdr  cmdline.kmdr  dialogs.kmdr  initialize.kmdr  picview.kmdr  settings.kmdr \
	statusbar.kmdr  table.kmdr    widgets.kmdr
	

tutorialdir = ${kde_datadir}/kmdr-editor/editor/tutorial
tutorial_DATA = README

